--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
+#root {
+  padding-top: 10%;
+}
 .App {
+  text-align: center;
+  width: 600px;
+  border: 1px solid grey;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
+}
+
+#form-header {
+  display: flex;
+}
+#form-header span {
+  text-align: left;
+  width: 33%;
+  margin: 10px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#form-input {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 40px;
+}
+#form-input input {
+  width: 33%;
+  margin: 10px;
+  height: 100%;
+}
+#form-input button {
+  width: 10%;
+  margin: 10px;
+  height: 100%;
+  box-sizing: border-box;
+  text-align: center;
+}
+#form-footer {
+  display: flex;
+  margin-top: 10px;
+}
+#form-footer span {
+  text-align: left;
+  width: 33%;
+  margin: 10px;
+  text-align: center;
+}
+#collect {
+}
+.collect-item {
+  display: flex;
 }
 
-.App-link {
-  color: #61dafb;
+.collect-item span {
+  display: block;
+  width: 33%;
+  margin: 2px 10px;
+  text-align: left;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.collect-item > *:last-child {
+  text-align: center;
 }
